feat: add multi-instance support for parallel printer setups
- Add --instance/--printer-data/--config-dir flags to CLI wizard
- Make WizardState and ConfigGenerator instance-aware (no hardcoded paths)
- Parameterize systemd/nginx templates for per-instance printer_data + ports
- Add instance-aware helper functions to klipper-install.sh
- Add klipper_instance_manager.sh for create/list/start/stop/remove operations
- Add Manage Instances menu to wizard UI
- Add comprehensive multi-instance documentation

Enables running 2+ independent Klipper stacks on one host with:
- Separate printer_data-<id> directories
- Distinct systemd units (klipper-<id>, moonraker-<id>)
- Per-instance Moonraker + web UI ports
- Shared Klipper/Moonraker source trees (no duplication)

Perfect for multi-printer farms, VzBot twins, or parallel test/prod setups.

--- a/scripts/lib/service-templates/klipper.service
+++ b/scripts/lib/service-templates/klipper.service
@@ -17,9 +17,9 @@ User=%USER%
 RemainAfterExit=yes
 ExecStart=%HOME%/klippy-env/bin/python \
     %HOME%/klipper/klippy/klippy.py \
-    %HOME%/printer_data/config/printer.cfg \
-    -l %HOME%/printer_data/logs/klippy.log \
-    -I %HOME%/printer_data/comms/klippy.serial \
-    -a %HOME%/printer_data/comms/klippy.sock
+    %PRINTER_DATA%/config/printer.cfg \
+    -l %PRINTER_DATA%/logs/klippy.log \
+    -I %PRINTER_DATA%/comms/klippy.serial \
+    -a %PRINTER_DATA%/comms/klippy.sock
 Restart=always
 RestartSec=10
