--- a/scripts/lib/nginx-templates/mainsail.conf
+++ b/scripts/lib/nginx-templates/mainsail.conf
@@ -27,7 +27,7 @@ server {
     }
 
     location /websocket {
-        proxy_pass http://apiserver/websocket;
+        proxy_pass http://127.0.0.1:%MOONRAKER_PORT%/websocket;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
@@ -38,7 +38,7 @@ server {
     }
 
     location ~ ^/(printer|api|access|machine|server)/ {
-        proxy_pass http://apiserver$request_uri;
+        proxy_pass http://127.0.0.1:%MOONRAKER_PORT%$request_uri;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
