--- a/schema/config-sections.yaml
+++ b/schema/config-sections.yaml
@@ -2942,21 +2942,21 @@ common:
 
           M117 Load new filament and RESUME
 
-  # Heater calibration helper macros (PID or MPC for Kalico)
-  heater_calibration:
+  # Heater calibration helper macros (PID)
+  heater_calibration_pid:
     render: raw
     template: |
       [gcode_macro PID_CALIBRATE_EXTRUDER]
       description: Run PID calibration for extruder (TARGET=240 default)
       gcode:
-          {% set TARGET = params.TARGET|default(240)|int %}
-          M117 PID calibrating extruder at {TARGET}C...
+          {% raw %}{% set TARGET = params.TARGET|default(240)|int %}{% endraw %}
+          M117 PID calibrating extruder at {{ '{TARGET}' }}C...
           
           # Ensure fan is on for realistic conditions
           M106 S255
           
           # Run PID calibration
-          PID_CALIBRATE HEATER=extruder TARGET={TARGET}
+          PID_CALIBRATE HEATER=extruder TARGET={{ '{TARGET}' }}
           
           M117 PID calibration complete!
           M118 Run SAVE_CONFIG to save PID values to printer.cfg
@@ -2967,35 +2967,37 @@ common:
       [gcode_macro PID_CALIBRATE_BED]
       description: Run PID calibration for heated bed (TARGET=60 default)
       gcode:
-          {% set TARGET = params.TARGET|default(60)|int %}
-          M117 PID calibrating bed at {TARGET}C...
+          {% raw %}{% set TARGET = params.TARGET|default(60)|int %}{% endraw %}
+          M117 PID calibrating bed at {{ '{TARGET}' }}C...
           
           # Run PID calibration
-          PID_CALIBRATE HEATER=heater_bed TARGET={TARGET}
+          PID_CALIBRATE HEATER=heater_bed TARGET={{ '{TARGET}' }}
           
           M117 PID calibration complete!
           M118 Run SAVE_CONFIG to save PID values to printer.cfg
-      
-      {% set _klipper_variant = (klipper.variant if klipper is defined and klipper.variant is defined else 'standard') %}
-      {% if _klipper_variant == 'kalico' and extruder.control == 'mpc' %}
+  
+  # MPC calibration (Kalico only)
+  heater_calibration_mpc:
+    condition: "extruder.control == 'mpc'"
+    render: raw
+    template: |
       [gcode_macro MPC_CALIBRATE_EXTRUDER]
       description: Run MPC calibration for extruder (Kalico only, TARGET=240 default)
       gcode:
-          {% set TARGET = params.TARGET|default(240)|int %}
-          M117 MPC calibrating extruder at {TARGET}C...
+          {% raw %}{% set TARGET = params.TARGET|default(240)|int %}{% endraw %}
+          M117 MPC calibrating extruder at {{ '{TARGET}' }}C...
           
           # Ensure fan is on for realistic conditions
           M106 S255
           
           # Run MPC calibration
-          MPC_CALIBRATE HEATER=extruder TARGET={TARGET}
+          MPC_CALIBRATE HEATER=extruder TARGET={{ '{TARGET}' }}
           
           M117 MPC calibration complete!
           M118 Run SAVE_CONFIG to save MPC parameters to printer.cfg
           
           # Turn off fan
           M106 S0
-      {% endif %}
 
   # Stepper identification & calibration macros (kept separate for readability/continuity)
   calibration:
