fix(macros): home all axes (G28) at start of START_PRINT
Previously only homed X/Y in Phase 1 when level_bed_at_temp was enabled,
then conditionally homed Z in Phase 2. Z homing could be skipped if axes
were already marked as homed.

Now: full G28 in Phase 1, then unconditional G28 Z re-home at bed
temperature in Phase 2 when level_bed_at_temp is enabled. Also always
wait for bed temp before leveling regardless of level_bed_at_temp.

Made-with: Cursor

--- a/schema/config-sections.yaml
+++ b/schema/config-sections.yaml
@@ -2265,44 +2265,35 @@ common:
           M104 S{EXTRUDER_PREHEAT}
           {% endif %}
 
-          # Home strategy depends on level_bed_at_temp setting
-          {% if cfg.level_bed_at_temp %}
-              # For temperature-sensitive probes: Home X/Y first, then Z after bed is hot
-              {% if "xy" not in printer.toolhead.homed_axes %}
-                  {% if cfg.led_enabled %}
-                  _STATUS_LED STATUS=homing
-                  {% endif %}
-                  M117 Homing X/Y...
-                  G28 X Y
+          # Home all axes at start
+          {% if "xyz" not in printer.toolhead.homed_axes %}
+              {% if cfg.led_enabled %}
+              _STATUS_LED STATUS=homing
               {% endif %}
-          {% else %}
-              # Not using level_bed_at_temp: full home now is fine
-              _HOME_IF_NEEDED
+              M117 Homing...
+              G28
           {% endif %}
 
           # ───────────────────────────────────────────────────────────────────────────
           # Phase 2: Wait for bed and optional heat soak
           # ───────────────────────────────────────────────────────────────────────────
+          # Wait for bed to reach probe temperature before leveling
+          M117 Waiting for bed...
+          M190 S{PROBE_TEMP}
+
+          {% if cfg.bed_stabilize_before_probe and cfg.bed_stabilize_dwell > 0 %}
+          # Optional dwell time for thermal equilibrium
+          M117 Stabilizing bed temp...
+          G4 P{cfg.bed_stabilize_dwell * 1000}
+          {% endif %}
+
           {% if cfg.level_bed_at_temp %}
-              # Wait for bed to reach probe temperature before Z home and leveling
-              M117 Waiting for bed...
-              M190 S{PROBE_TEMP}
-
-              {% if cfg.bed_stabilize_before_probe and cfg.bed_stabilize_dwell > 0 %}
-              # Optional dwell time for thermal equilibrium
-              M117 Stabilizing bed temp...
-              G4 P{cfg.bed_stabilize_dwell * 1000}
+              # Re-home Z at bed temperature for probe accuracy
+              {% if cfg.led_enabled %}
+              _STATUS_LED STATUS=homing
               {% endif %}
-
-              # Now home Z with bed at temperature (critical for temp-sensitive probes)
-              # Always re-home Z here since bed temp affects probe accuracy
-              {% if "z" not in printer.toolhead.homed_axes or cfg.always_home_z %}
-                  {% if cfg.led_enabled %}
-                  _STATUS_LED STATUS=homing
-                  {% endif %}
-                  M117 Homing Z (bed at temp)...
-                  G28 Z
-              {% endif %}
+              M117 Homing Z (bed at temp)...
+              G28 Z
           {% endif %}
 
           {% if SOAK_TIME > 0 %}
